GNOME Bugzilla – Bug 454247
rhythmbox audio CD related crash
Last modified: 2012-02-09 11:58:22 UTC
Steps to reproduce: 1. insterted audio CD whilst playing music 2. bugbuddy popped up reporting rb had crashed 3. music continues Stack trace: Backtrace was generated from '/usr/local/bin/rhythmbox' Using host libthread_db library "/lib/libthread_db.so.1". [Thread debugging using libthread_db enabled] [New Thread 46912600451424 (LWP 27646)] [New Thread 1166326112 (LWP 27737)] [New Thread 1107577184 (LWP 27736)] [New Thread 1225075040 (LWP 27729)] [New Thread 1208289632 (LWP 27728)] [New Thread 1157933408 (LWP 27722)] [New Thread 1258645856 (LWP 27717)] [New Thread 1132755296 (LWP 27712)] [New Thread 1149540704 (LWP 27678)] [New Thread 1141148000 (LWP 27677)] [New Thread 1090791776 (LWP 27676)] [New Thread 1115969888 (LWP 27675)] [New Thread 1124362592 (LWP 27660)] [New Thread 1099184480 (LWP 27656)] [New Thread 1082399072 (LWP 27655)] [New Thread 1074006368 (LWP 27648)] 0x00002aaaaf4eae22 in poll () from /lib/libc.so.6
+ Trace 146099
Thread 15 (Thread 1082399072 (LWP 27655))
Other information: Distribution: Ubuntu 6.06 (dapper) Package: rhythmbox Severity: normal Version: GNOME2.14.3 0.10.1 Gnome-Distributor: Ubuntu Synopsis: rhythmbox audio CD related crash Bugzilla-Product: rhythmbox Bugzilla-Component: general Bugzilla-Version: 0.10.1 BugBuddy-GnomeVersion: 2.0 (2.14.1)
Command line output from the above crash: $ rhythmbox Couldn't load themed icon 'audio-volume-muted': Icon 'audio-volume-muted' not present in theme Couldn't load themed icon 'audio-volume-low': Icon 'audio-volume-low' not present in theme Couldn't load themed icon 'audio-volume-medium': Icon 'audio-volume-medium' not present in theme Couldn't load themed icon 'audio-volume-high': Icon 'audio-volume-high' not present in theme sys:1: GtkWarning: gdk_pixbuf_scale_simple: assertion `dest_width > 0' failed sys:1: GtkWarning: gdk_pixbuf_get_width: assertion `pixbuf != NULL' failed sys:1: GtkWarning: gdk_pixbuf_get_height: assertion `pixbuf != NULL' failed sys:1: GtkWarning: gdk_draw_pixbuf: assertion `GDK_IS_PIXBUF (pixbuf)' failed sys:1: Warning: g_object_unref: assertion `G_IS_OBJECT (object)' failed Couldn't load themed icon 'audio-volume-muted': Icon 'audio-volume-muted' not present in theme Couldn't load themed icon 'audio-volume-low': Icon 'audio-volume-low' not present in theme Couldn't load themed icon 'audio-volume-medium': Icon 'audio-volume-medium' not present in theme Couldn't load themed icon 'audio-volume-high': Icon 'audio-volume-high' not present in theme (rhythmbox:27646): Rhythmbox-WARNING **: Failed to invoke org.gnome.PowerManager.Inhibit: Method "Inhibit" with signature "ss" on interface "org.gnome.PowerManager" doesn't exist (rhythmbox:27646): Rhythmbox-WARNING **: Failed to invoke org.gnome.PowerManager.Inhibit: Method "Inhibit" with signature "ss" on interface "org.gnome.PowerManager" doesn't exist sys:1: Warning: g_hash_table_remove: assertion `hash_table != NULL' failed RhythmDB-ERROR **: file rhythmdb-tree.c: line 1320 (remove_child): assertion failed: (g_hash_table_remove (parent->children, data)) aborting...
Is this the same? 1. have an audio CD loaded (but not playing in any program) 2. start rb 3. physically eject the CD 4. crash $ rhythmbox Couldn't load themed icon 'audio-volume-muted': Icon 'audio-volume-muted' not present in theme Couldn't load themed icon 'audio-volume-low': Icon 'audio-volume-low' not present in theme Couldn't load themed icon 'audio-volume-medium': Icon 'audio-volume-medium' not present in theme Couldn't load themed icon 'audio-volume-high': Icon 'audio-volume-high' not present in theme sys:1: GtkWarning: gdk_pixbuf_scale_simple: assertion `dest_width > 0' failed sys:1: GtkWarning: gdk_pixbuf_get_width: assertion `pixbuf != NULL' failed sys:1: GtkWarning: gdk_pixbuf_get_height: assertion `pixbuf != NULL' failed sys:1: GtkWarning: gdk_draw_pixbuf: assertion `GDK_IS_PIXBUF (pixbuf)' failed sys:1: Warning: g_object_unref: assertion `G_IS_OBJECT (object)' failed Couldn't load themed icon 'audio-volume-muted': Icon 'audio-volume-muted' not present in theme Couldn't load themed icon 'audio-volume-low': Icon 'audio-volume-low' not present in theme Couldn't load themed icon 'audio-volume-medium': Icon 'audio-volume-medium' not present in theme Couldn't load themed icon 'audio-volume-high': Icon 'audio-volume-high' not present in theme sys:1: Warning: g_hash_table_remove: assertion `hash_table != NULL' failed RhythmDB-ERROR **: file rhythmdb-tree.c: line 1320 (remove_child): assertion failed: (g_hash_table_remove (parent->children, data)) aborting... Backtrace was generated from '/usr/local/bin/rhythmbox' Using host libthread_db library "/lib/libthread_db.so.1". [Thread debugging using libthread_db enabled] [New Thread 46912600451424 (LWP 27906)] [New Thread 1107577184 (LWP 27917)] [New Thread 1099184480 (LWP 27915)] [New Thread 1090791776 (LWP 27914)] [New Thread 1074006368 (LWP 27908)] 0x00002aaaaf4eae22 in poll () from /lib/libc.so.6
+ Trace 146100
Thread 4 (Thread 1090791776 (LWP 27914))
*** Bug 553942 has been marked as a duplicate of this bug. ***
*** Bug 557892 has been marked as a duplicate of this bug. ***
*** Bug 549221 has been marked as a duplicate of this bug. ***
*** Bug 494005 has been marked as a duplicate of this bug. ***
*** Bug 484747 has been marked as a duplicate of this bug. ***
*** Bug 512854 has been marked as a duplicate of this bug. ***
*** Bug 555781 has been marked as a duplicate of this bug. ***
*** Bug 575584 has been marked as a duplicate of this bug. ***
*** Bug 616687 has been marked as a duplicate of this bug. ***
last dupe in 0.12.x
pretty sure commit e64f83a fixes this.