rhythmdb: set 'removed' flag in rhythmdb_entry_delete_by_type

This ensures that future entry changes are ignored, which prevents
the rhythmdb hash table tree from getting messed up.

https://bugzilla.gnome.org/show_bug.cgi?id=454247 probably